@@ -6,3 +6,7 @@
 	contained '<', '>' or '&', the document generated by previous version would be
 	invalid. The characters are now escaped to '&lt;', '&gt;' and '&apos;'
   * minor test refactoring
+
+2010-03-30 Thomas Ritz
+  * Support changes in the header
+  * new matcher "contain_in"
